--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ var WPBookingCalendarSettings = {"path":"http:\/\/healthandcare.ancorathemes.com
                         <span class="contact_icon icon-phone"></span>
                 <span class="contact_label contact_phone">(000) 000-0000</span>
                 <span class="contact_icon icon-home"></span>
-    <span class="contact_label contact_address_1">Some Address, Seattle, WA 10075</span>
+    <span class="contact_label contact_address_1">Some Address in, Seattle, WA 10075</span>
   </div>
 
 <div class="top_panel_top_user_area">
